# 30daymapchallenge

./: 30daychallenge.qgz  Chropleth.py  Day1.py  Day2.py  Lines_Day2.py  Local_Nature_Reserves_England_6224075941597999982.csv  Points_Day1.py  README.md  dl.py  map.py  pyproject.toml
data/: Submarine_Cables_and_Terminals__2018_.geojson
